<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin">

    <TextView
        android:id="@+id/movie_data_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/movie_data_title"
        style="@style/TextStyle.Black.Title" />

    <TextView
        android:id="@+id/movie_genres_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_half_vertical_margin"
        android:text="@string/movie_genres_title"
        style="@style/TextStyle.Black.SubTitle" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/genres_rv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/movie_status_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_half_vertical_margin"
        android:text="@string/movie_status_title"
        style="@style/TextStyle.Black.SubTitle" />

    <TextView
        android:id="@+id/movie_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/TextStyle.Black" />

    <TextView
        android:id="@+id/movie_budget_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_half_vertical_margin"
        android:text="@string/movie_budget_title"
        style="@style/TextStyle.Black.SubTitle" />

    <TextView
        android:id="@+id/movie_budget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/TextStyle.Black" />

    <TextView
        android:id="@+id/movie_revenue_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_half_vertical_margin"
        android:text="@string/movie_revenue_title"
        style="@style/TextStyle.Black.SubTitle" />

    <TextView
        android:id="@+id/movie_revenue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/TextStyle.Black" />

    <TextView
        android:id="@+id/movie_runtime_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_half_vertical_margin"
        android:text="@string/movie_runtime_title"
        style="@style/TextStyle.Black.SubTitle" />

    <TextView
        android:id="@+id/movie_runtime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/TextStyle.Black" />

    <TextView
        android:id="@+id/movie_release_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_half_vertical_margin"
        android:text="@string/movie_release_date_title"
        style="@style/TextStyle.Black.SubTitle" />

    <TextView
        android:id="@+id/movie_release_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/TextStyle.Black" />

    <TextView
        android:id="@+id/movie_url_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_half_vertical_margin"
        android:text="@string/movie_url_title"
        style="@style/TextStyle.Black.SubTitle" />

    <TextView
        android:id="@+id/movie_url"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_half_vertical_margin"
        android:clickable="true"
        android:textColor="@color/colorAccent"
        android:gravity="center"
        style="@style/TextStyle.Black.Title" />

</LinearLayout>